--- a/GIGA_Piano_XL.ipynb
+++ b/GIGA_Piano_XL.ipynb
@@ -1468,6 +1468,7 @@
         "number_of_notes_to_generate = 100 #@param {type:\"slider\", min:10, max:5000, step:1}\n",
         "desired_time = 10 #@param {type:\"slider\", min:1, max:127, step:1}\n",
         "desired_duration = 9 #@param {type:\"slider\", min:1, max:127, step:1}\n",
+        "number_of_memory_tokens = 64 #@param {type:\"slider\", min:64, max:1920, step:32}\n",
         "temperature = 0.8 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "show_stats = False #@param {type:\"boolean\"}\n",
         "\n",
