--- a/Training-Code/GIGA_Piano_XL_Maker.ipynb
+++ b/Training-Code/GIGA_Piano_XL_Maker.ipynb
@@ -321,7 +321,7 @@
         "        continue\n",
         "\n",
         "print('=' * 70)\n",
-        "TMIDIX.Tegridy_Any_Pickle_File_Writer(melody_chords_f, '/content/GIGA_Piano_XL_Processed_MIDIs')        \n",
+        "TMIDIX.Tegridy_Any_Pickle_File_Writer(train_data1, '/content/GIGA_Piano_XL_Processed_MIDIs')        \n",
         "print('Done!')   \n",
         "print('=' * 70)"
       ],
