--- a/GIGA_Piano_XL.ipynb
+++ b/GIGA_Piano_XL.ipynb
@@ -11,7 +11,7 @@
         "id": "SiTIpPjArIyr"
       },
       "source": [
-        "# GIGA-Piano XL (ver. 2.0)\n",
+        "# GIGA-Piano XL (ver. 3.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -98,7 +98,7 @@
         "!pip install tqdm\n",
         "!pip install matplotlib\n",
         "!pip install torch-summary\n",
-        "!pip install sklearn\n",
+        "\n",
         "!pip install numpy\n",
         "\n",
         "!apt install fluidsynth #Pip does not work for some reason. Only apt works\n",
@@ -201,7 +201,9 @@
         "\n",
         "#@markdown Model precision option\n",
         "\n",
-        "model_precision = \"float16\" # @param [\"float16\", \"float32\"]\n",
+        "model_precision = \"bfloat16\" # @param [\"bfloat16\", \"float16\", \"float32\"]\n",
+        "\n",
+        "#@markdown bfloat16 == Third precision/triple speed (if supported, otherwise the model will default to float16)\n",
         "\n",
         "#@markdown float16 == Half precision/double speed\n",
         "\n",
@@ -215,7 +217,19 @@
         "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
         "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
         "device_type = 'cuda'\n",
-        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[model_precision]\n",
+        "\n",
+        "if model_precision == 'bloat16' and torch.cuda.is_bf16_supported():\n",
+        "  dtype = 'bloat16'\n",
+        "else:\n",
+        "  dtype = 'float16'\n",
+        "\n",
+        "if model_precision == 'float16':\n",
+        "  dtype = 'float16'\n",
+        "\n",
+        "if model_precision == 'float32':\n",
+        "  dtype = 'float32'\n",
+        "\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
         "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "config = GPTConfig(512,\n",
@@ -240,6 +254,8 @@
         "model.eval()\n",
         "\n",
         "print('Done!')\n",
+        "print('=' * 70)\n",
+        "print('Model will use', dtype, 'precision...')\n",
         "\n",
         "summary(model)\n",
         "\n",
@@ -278,9 +294,9 @@
       "source": [
         "#@title Upload your own seed MIDI\n",
         "\n",
-        "#@markdown Press the play button to summon the MIDI file upload widget\n",
+        "#@markdown Press play button to summon MIDI file upload widget below\n",
         "\n",
-        "render_MIDI_to_audio = False # @param {type:\"boolean\"}\n",
+        "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "\n",
@@ -402,12 +418,12 @@
         "\n",
         "          song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'GIGA-Piano XL',\n",
-        "                                                          output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                          track_name='Project Los Angeles',\n",
-        "                                                          list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                          number_of_ticks_per_quarter=500)\n",
+        "      detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                                output_signature = 'GIGA-Piano XL',\n",
+        "                                                                output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                                track_name='Project Los Angeles',\n",
+        "                                                                list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                                )\n",
         "\n",
         "      print('Done!')\n",
         "\n",
@@ -488,7 +504,6 @@
         "print('Model temperature:', temperature)\n",
         "print('Number of batches:', number_of_batches)\n",
         "print('=' * 70)\n",
-        "print('Generating...')\n",
         "\n",
         "if custom_MIDI_or_improvisation:\n",
         "  inp = inputs[:number_of_prime_notes*4]\n",
@@ -569,12 +584,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "\n",
         "    print('Done!')\n",
         "\n",
@@ -725,12 +740,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "\n",
         "    print('Done!')\n",
         "\n",
@@ -887,12 +902,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "\n",
         "    print('Done!')\n",
         "\n",
@@ -1046,12 +1061,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "\n",
         "    print('Done!')\n",
         "\n",
@@ -1227,12 +1242,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
         "                                                        output_signature = 'GIGA-Piano XL',\n",
         "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
         "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                        )\n",
         "\n",
         "    print('Done!')\n",
         "\n",
@@ -1398,13 +1413,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
         "                                                        output_signature = 'GIGA-Piano XL',\n",
         "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
         "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
-        "\n",
+        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                        )\n",
         "    print('Done!')\n",
         "\n",
         "print('=' * 70)\n",
@@ -1561,13 +1575,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
-        "\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "    print('Done!')\n",
         "\n",
         "print('=' * 70)\n",
@@ -1728,13 +1741,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
-        "\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "    print('Done!')\n",
         "\n",
         "print('=' * 70)\n",
@@ -1908,13 +1920,12 @@
         "\n",
         "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'GIGA-Piano XL',\n",
-        "                                                        output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
-        "\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'GIGA-Piano XL',\n",
+        "                                                              output_file_name = '/content/GIGA-Piano-XL-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "    print('Done!')\n",
         "\n",
         "print('=' * 70)\n",
